--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.4.7",
     "firebase": "^12.5.0",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
